fix alignment issues

--- a/index.css
+++ b/index.css
@@ -528,6 +528,7 @@ body {
 .grid-container--destination > picture {
     grid-area: image;
     max-width: 60%;
+    align-self: start;
 }
 
 .grid-container--destination > .tab-list {
@@ -630,8 +631,7 @@ body {
             '. image content .';
     }
     
-    .grid-container--destination > picture,
-    .grid-container--crew > picture{
+    .grid-container--destination > picture {
         max-width: 90%;
     }
      
@@ -641,23 +641,17 @@ body {
     }
     
     .grid-container--crew {
+        grid-template-columns: minmax(1rem, 1fr) minmax(0, 37rem) minmax(0, 23rem) minmax(1rem, 1fr);
+        justify-items: start;
         grid-template-areas: 
             '. title title .'
             '. content image .'
             '. tabs image .';
     }
     
-    .grid-container--crew > .dot-indicators {
-        justify-self: start;
-    }
-    
-    /* .grid-container--crew > picture {
+    .grid-container--crew > picture {
+        grid-column: span 2;
         align-self: end;
-    } */
-
-}
-
-
-[role="tab"]:focus {
-    color: limegreen;
+        max-width: 90%;
+    }
 }
